--- a/fields/fields.html
+++ b/fields/fields.html
@@ -190,7 +190,7 @@
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 text-sm">
             <li>
-               <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-600 hover:text-white group">
+               <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-home">
                   </i>
                   <span class="ms-3">Dashboard</span>
@@ -198,7 +198,7 @@
             </li>
 
             <li>
-               <a href="/komunitas/komunitas.html" class="flex items-center w-full p-2 text-sm text-black hover:bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
+               <a href="/komunitas/komunitas.html" class="flex items-center w-full p-2 text-sm text-black hover:bg-red-700 hover:bg-red-700 hover:text-white duration-75 rounded-lg group" 
                   aria-controls="dropdown-example" 
                   data-collapse-toggle="dropdown-example">
                   <i class="fi fi-rs-users-alt"></i>   
@@ -209,10 +209,10 @@
                </a>
                <ul id="dropdown-example" class="hidden py-2 space-y-2">
                      <li>
-                        <a href="/komunitas/myKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 transition duration-75 rounded-lg pl-11">My Community</a>
+                        <a href="/komunitas/myKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-700 transition duration-75 rounded-lg pl-11">My Community</a>
                      </li>
                      <li>
-                        <a href="/komunitas/addKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-600 hover:text-white transition duration-75 rounded-lg pl-11">Add Community</a>
+                        <a href="/komunitas/addKomunitas.html" class="flex items-center w-full p-2 text-black hover:bg-red-700 hover:text-white transition duration-75 rounded-lg pl-11">Add Community</a>
                      </li>
                </ul>
             </li>
@@ -238,17 +238,11 @@
                });
             </script>
             <li>
-               <a href="/fields/fields.html" class="flex items-center p-2 text-sm text-black rounded-lg hover:bg-red-600 hover:text-white group">
-                  <i class="fi fi-rs-court-sport">
-                  </i>
-                  <span class="flex-1 ms-3 whitespace-nowrap">Field</span>
-               </a>
-            </li>
-            <li>
-               <a href="/fields/fields.html" class="flex items-center w-full p-2 text-sm text-black hover:bg-red-600 hover:bg-red-600 hover:text-white duration-75 rounded-lg group" 
+               <a href="/fields/fields.html" class="flex text-sm items-center w-full p-2 text-black bg-red-700 hover:bg-red-700 text-white rounded-lg group" 
                   aria-controls="dropdown-fields" 
                   data-collapse-toggle="dropdown-fields">
-                  <i class="fi fi-rs-users-alt"></i>   
+                  <i class="fi fi-rs-court-sport">
+                  </i>   
                   <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">Fields</span>
                   <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -300,7 +294,7 @@
                </a>
                <ul id="dropdown-sportsgroup" class="hidden py-2 space-y-2">
                      <li>
-                        <a href="/sports-group/add-sportsgroup.html" class="flex items-center w-full p-2 text-black hover:bg-red-700 hover:text-white transition duration-75 rounded-lg pl-11">Add Sports Group</a>
+                        <a href="/sports-group/add-sportsgroup.html" class="flex items-center p-2 text-sm text-black rounded-lg hover:bg-red-700 hover:text-white group">Add Sports Group</a>
                      </li>
                </ul>
             </li>
@@ -326,7 +320,7 @@
                });
             </script>
             <li>
-               <a href="/profile/profile.html" class="flex text-sm items-center w-full p-2 text-black bg-red-700 hover:bg-red-700 text-white rounded-lg group">
+               <a href="/profile/profile.html" class="flex items-center p-2 text-sm text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-user">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Profile</span>
