--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -331,7 +331,7 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 p-4 ">  
             <h2 class="text-2xl font-bold text-red-700 mb-2">Preferred Community</h2>
-            <div class="flex space-x-4 overflow-x-auto gap-4 pr-4">
+            <div class="flex space-x-4 overflow-x-auto gap-4 pb-4 pr-4">
                <!-- Card 1 -->
                <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-45 hover:bg-gray-300 flex-shrink-0">
                   <a href="detailKomunitas.html">
@@ -406,7 +406,7 @@
             </div>
             
             <h2 class="text-2xl font-bold text-red-700 mb-2 mt-4">Community in Your City</h2>
-            <div class="flex space-x-4 overflow-x-auto gap-4 pr-4">
+            <div class="flex space-x-4 overflow-x-auto gap-4 pb-4 pr-4">
                <!-- Card 1 -->
                <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-45 hover:bg-gray-300 flex-shrink-0">
                   <a href="detailKomunitas.html">
