--- a/landingpage/FAQ.html
+++ b/landingpage/FAQ.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-    <nav class="sticky isolate w-full z-9 font-normal py-8 mx-auto flex items-center justify-between pr-48 pl-48">
+    <nav class="sticky isolate w-full z-9 font-normal py-4 mx-auto flex items-center justify-between pr-48 pl-48">
         <div class="flex items-center justify-between w-full">
             <div class="nav__logo">
                 <a href="#">
@@ -30,7 +30,7 @@
         </div>
 
         <!-- Menu Links -->
-        <ul class="absolute top-5 left-0 w-full p-8 list-none flex flex-row items-center justify-center gap-8">
+        <ul class="absolute top-5 left-0 w-full p-4 list-none flex flex-row items-center justify-center gap-8">
             <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
             <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
             <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Help</a></li>
@@ -38,7 +38,7 @@
 
         <!-- Buttons -->
         <div class="flex flex-1 space-x-2 z-20">
-            <a href="/register/registerNew.html class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
+            <a href="/register/registerNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
                 Sign Up
             </a>
             <a href="/login/loginNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-[#b00404] transition duration-300" style="background-color:#d60505;">
@@ -48,7 +48,6 @@
     </nav>
     <div class="container mx-auto p-8 pl-48 pr-48">
         <h1 class="text-3xl font-bold mb-6 text-center">Frequently Asked Questions</h1>
-
         <div class="bg-white shadow-md rounded-lg p-6 mb-4">
         <div class="flex justify-between items-center">
             <h2 class="text-lg font-semibold">Apa itu Sports Space?</h2>
@@ -118,6 +117,32 @@
             <p class="text-gray-600">Kami menjaga keamanan data Anda dengan.</p>
         </div>
         </div>
+
+        <!-- Contact Us Form -->
+        <h2 class="text-3xl font-bold mt-12 mb-6 text-center">Contact Sports Space</h2>
+        <form action="#" method="POST" class="bg-white shadow-md rounded-lg p-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                <div>
+                    <label for="fullname" class="block text-gray-700 text-sm font-bold mb-2">Full Name</label>
+                    <input type="text" id="fullname" name="fullname" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+                </div>
+                <div>
+                    <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
+                    <input type="email" id="email" name="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+                </div>
+            </div>
+            <div class="mb-4">
+                <label for="phone" class="block text-gray-700 text-sm font-bold mb-2">Phone Number</label>
+                <input type="tel" id="phone" name="phone" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+            </div>
+            <div class="mb-4">
+                <label for="message" class="block text-gray-700 text-sm font-bold mb-2">Message</label>
+                <textarea id="message" name="message" rows="5" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required></textarea>
+            </div>
+            <div class="flex items-center justify-between">
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
+            </div>
+        </form>
     </div>
 
     <script>
@@ -127,44 +152,46 @@
         }
     </script>
 </body>
-<footer class="bg-white">
-    <div class="mx-auto w-full max-w-screen-xl">
-      <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-3">
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4">
-                    <a href="#" class=" hover:underline">About</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Careers</a>
-                </li>
-            </ul>
+<footer class="bg-gray-100">
+    <div class="mx-auto w-full max-w-screen-xl flex flex-col items-center">
+        <div class="grid grid-cols-2 gap-80 px-4 py-6 lg:py-8 md:grid-cols-3">
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">About</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Careers</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Instagram</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Twitter</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Facebook</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Contact Us</a>
+                    </li>
+                </ul>
+             </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Jl.Majalaya</a>
+                    </li>
+                </ul>
+          </div>
         </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Instagram</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Twitter</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Facebook</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Jl.Majalaya</a>
-                </li>
-            </ul>
-        </div>
-  </footer>
+    </div>
+</footer>
 </html>
