--- a/landingpage/firstpage.html
+++ b/landingpage/firstpage.html
@@ -14,7 +14,7 @@
     <title>SportsSpace</title>
   </head>
   <body>
-    <nav class="sticky isolate w-full z-9 font-normal py-8 mx-auto flex items-center justify-between pr-8 pl-8">
+    <nav class="sticky isolate w-full z-9 font-normal py-4 mx-auto flex items-center justify-between pr-8 pl-8">
       <div class="flex items-center justify-between w-full">
           <div class="nav__logo">
               <a href="#">
@@ -27,7 +27,7 @@
       </div>
 
       <!-- Menu Links -->
-      <ul class="absolute top-5 left-0 w-full p-8 list-none flex flex-row items-center justify-center gap-8">
+      <ul class="absolute top-5 left-0 w-full p-4 list-none flex flex-row items-center justify-center gap-8">
           <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
           <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
           <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Help</a></li>
@@ -77,44 +77,46 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
-  <footer style="background-color: #d60505;">
-    <div class="mx-auto w-full max-w-screen-xl">
-      <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-3">
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
-            <ul class="text-white font-medium">
-                <li class="mb-4">
-                    <a href="#" class=" hover:underline">About</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Careers</a>
-                </li>
-            </ul>
+  <footer class="bg-gray-100">
+    <div class="mx-auto w-full max-w-screen-xl flex flex-col items-center">
+        <div class="grid grid-cols-2 gap-80 px-4 py-6 lg:py-8 md:grid-cols-3">
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">About</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Careers</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Instagram</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Twitter</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Facebook</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Contact Us</a>
+                    </li>
+                </ul>
+             </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Jl.Majalaya</a>
+                    </li>
+                </ul>
+          </div>
         </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
-            <ul class="text-white font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Instagram</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Twitter</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Facebook</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
-            <ul class="text-white font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Jl.Majalaya</a>
-                </li>
-            </ul>
-        </div>
-  </footer>
+    </div>
+</footer>
 </html>
