--- a/register/registerNew.html
+++ b/register/registerNew.html
@@ -17,7 +17,7 @@
     }
  </style>
 <body>
-    <nav class="sticky isolate w-full z-9 font-normal py-8 mx-auto flex items-center justify-between pr-8 pl-8">
+    <nav class="sticky isolate w-full z-9 font-normal py-4 px-8 mx-auto flex items-center justify-between">
         <div class="flex items-center justify-between w-full">
             <div class="nav__logo">
                 <a href="#">
@@ -38,7 +38,7 @@
   
         <!-- Buttons -->
         <div class="flex flex-1 space-x-2 z-20">
-            <a href="/register/register.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
+            <a href="/register/registerNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-black hover:text-[#d60505] bg-transparent transition duration-300">
                 Sign Up
             </a>
             <a href="/login/loginNew.html" class="py-3 px-6 outline-none border-none text-base whitespace-nowrap rounded-[10px] text-white hover:bg-red-800 transition duration-300" style="background-color:#d60505;">
@@ -221,44 +221,46 @@
         </div>  
     </main>
 </body>
-<footer style="background-color: #FFFFFF;" class="sticky">
-    <div class="mx-auto w-full max-w-screen-xl ">
-      <div class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-3">
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
-            <ul class="text-gray-700 font-medium">
-                <li class="mb-4">
-                    <a href="#" class=" hover:underline">About</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Careers</a>
-                </li>
-            </ul>
+<footer class="bg-white">
+    <div class="mx-auto w-full max-w-screen-xl flex flex-col items-center">
+        <div class="grid grid-cols-2 gap-80 px-4 py-6 lg:py-8 md:grid-cols-3">
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Contact us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">About</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Careers</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Instagram</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Twitter</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Facebook</a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Contact Us</a>
+                    </li>
+                </ul>
+             </div>
+            <div class="flex flex-col items-center">
+                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase z-10">Location</h2>
+                <ul class="text-gray-500 dark:text-gray-400 font-medium text-center">
+                    <li class="mb-4">
+                        <a href="#" class="hover:underline">Jl.Majalaya</a>
+                    </li>
+                </ul>
+          </div>
         </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Follow Us</h2>
-            <ul class="text-gray-700 font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Instagram</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Twitter</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Facebook</a>
-                </li>
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase">Location</h2>
-            <ul class="text-gray-700 font-medium">
-                <li class="mb-4">
-                    <a href="#" class="hover:underline">Jl.Majalaya</a>
-                </li>
-            </ul>
-        </div>
-  </footer>
+    </div>
+</footer>
 </html>
