--- a/profile/profile.html
+++ b/profile/profile.html
@@ -331,47 +331,45 @@
         <div class="lg:w-4/5 md:w-4/5 p-4">
             <!-- Your Content Here -->
             <div class="bg-white p-6 rounded-lg shadow-md">
-               <img alt="Profile Picture" class="w-24 h-24 rounded-full" height="100" 
-               src="/image/football.jpg" width="100"/>
-                <div class="flex items-center space-x-6">
-                    <div>
-                        <h2 class="text-xl font-bold">
-                            FADIL RAHMAN </h2>
-                        <div class="grid grid-cols-3 gap-10">
-                            <div>
-                                <p>Email</p>
-                                <p class="font-semibold">fadil@gmail.com</p>
-                            </div>
-                            <div>
-                                <p>Name</p>
-                                <p class="font-semibold">Fadil Rahman</p>
-                            </div>
-                            <div>
-                                <p>Gender</p>
-                                <p class="font-semibold">Male</p>
-                            </div>
-                            <div>
-                                <p>City</p>
-                                <p class="font-semibold">Bandung</p>
-                            </div>
-                            <div>
-                                <p>Phone Number</p>
-                                <p class="font-semibold">0822-5678-9012</p>
-                            </div>
-                            <div>
-                                <p>Favorite Sports</p>
-                                <p class="font-semibold">Running</p>
-                                <p class="font-semibold">Football</p>
-                            </div>
-                            </div>
-                                 <a href="editProfile.html"> 
-                                    <button class="mt-4 px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700">
-                                    Edit Profil
-                                    </button>
-                                 </a>
-                            </div>
-                        </div>
-                    </div>
+               <div class="flex items-center space-x-6">
+                   <img alt="Profile Picture" class="w-24 h-24 rounded-full" height="100" 
+                        src="/image/football.jpg" width="100"/>
+                   <h2 class="text-xl font-bold">FADIL RAHMAN</h2>
+               </div>
+               <div class="grid grid-cols-3 gap-10 mt-4">
+                   <div>
+                       <p>Email</p>
+                       <p class="font-semibold">fadil@gmail.com</p>
+                   </div>
+                   <div>
+                       <p>Name</p>
+                       <p class="font-semibold">Fadil Rahman</p>
+                   </div>
+                   <div>
+                       <p>Gender</p>
+                       <p class="font-semibold">Male</p>
+                   </div>
+                   <div>
+                       <p>City</p>
+                       <p class="font-semibold">Bandung</p>
+                   </div>
+                   <div>
+                       <p>Phone Number</p>
+                       <p class="font-semibold">0822-5678-9012</p>
+                   </div>
+                   <div>
+                       <p>Favorite Sports</p>
+                       <p class="font-semibold">Running</p>
+                       <p class="font-semibold">Football</p>
+                   </div>
+               </div>
+               <a href="editProfile.html"> 
+                   <button class="mt-4 px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700">
+                       Edit Profil
+                   </button>
+               </a>
+           </div>
+           
                 </div>
             </div>
 
