finallll sebelum ujian

--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -335,8 +335,8 @@
                <!-- Card 1 -->
                <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-45 hover:bg-gray-300 flex-shrink-0">
                   <a href="detailKomunitas.html">
-                  <img src="../asset login/img/basket-bg.png" alt="Basket Majalaya" class="rounded-lg mb-3 w-32 h-32 border-2 border-gray-300">
-                  <h4 class="font-bold text-md">Basket Majalaya</h4>
+                  <img src="../asset login/img/futsal3-bg.jpg" alt="Basket Majalaya" class="rounded-lg mb-3 w-32 h-32 border-2 border-gray-300">
+                  <h4 class="font-bold text-md">Futsal Comunity</h4>
                    <div class="flex items-center text-sm text-gray-600">
                      <span>Futsal</span>
                   </div>
