--- a/sports-group/add-sportsgroup.html
+++ b/sports-group/add-sportsgroup.html
@@ -432,17 +432,17 @@
                            </div>
                         </li>
                         <li class="flex items-center mb-2 hover:bg-gray-100 p-2 rounded-lg">
-                           <img alt="Friend 1" class="rounded-full mr-2" height="30" src="https://storage.googleapis.com/a1aa/image/oDJoEMVqSvYhGBkeGM3OOYudbjHWHZwNX96KKC7DZwRfiF1TA.jpg" width="30"/>
+                           <img alt="Friend 1" class="rounded-full mr-2 w-8 h-8"  src="https://images.ctfassets.net/szez98lehkfm/owPUbtQc7an5ZEJhpHR6O/ae13d4541082f75d1bdba669f42487bb/MyIC_Article_98642"/>
                            <div>
-                              <p class="text-sm">Wiyah</p>
-                              <p class="text-gray-500 text-sm">Online 3 Jam yang lalu</p>
+                              <p class="text-sm">Jamson</p>
+                              <p class="text-gray-500 text-sm">Online 1 Jam yang lalu</p>
                            </div>
                         </li>
                         <li class="flex items-center mb-2 hover:bg-gray-100 p-2 rounded-lg">
-                           <img alt="Friend 1" class="rounded-full mr-2" height="30" src="https://storage.googleapis.com/a1aa/image/oDJoEMVqSvYhGBkeGM3OOYudbjHWHZwNX96KKC7DZwRfiF1TA.jpg" width="30"/>
+                           <img alt="Friend 1" class="rounded-full mr-2 w-8 h-8" height="30" src="/image/running.jpg"/>
                            <div>
-                              <p class="text-sm">Wiyah</p>
-                              <p class="text-gray-500 text-sm">Online 3 Jam yang lalu</p>
+                              <p class="text-sm">Andreas</p>
+                              <p class="text-gray-500 text-sm">Online 7 Jam yang lalu</p>
                            </div>
                         </li>
                      </ul>
@@ -455,8 +455,8 @@
                            <p class="font-bold">20</p>
                         </div>
                         <div>
-                           <p class="text-sm">Badminton</p>
-                           <p class="text-gray-500 text-sm">14.00 - 16.00</p>
+                           <p class="text-sm">Futsal</p>
+                           <p class="text-gray-500 text-sm">18.00 - 20.00</p>
                            <p class="text-gray-500 text-sm">Fun Game Bersama</p>
                         </div>
                      </div>
@@ -469,8 +469,7 @@
                            <p class="text-gray-500 text-sm">14.00 - 16.00</p>
                            <p class="text-gray-500 text-sm">Fun Game Bersama</p>
                         </div>
-                     </div>
-                     
+                     </div>  
                   </div>
                </div>
             </div>
