--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -328,7 +328,7 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 pb-4">  
             <!-- Container Utama -->
-            <div class="max-w-5xl mx-auto bg-white rounded-lg overflow-hidden mt-8">
+            <div class="max-w-5xl mx-auto bg-white rounded-lg overflow-hidden mt-4">
             <!-- <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4"> -->
                 <!-- Gambar Header -->
                 <div class="relative">
@@ -337,16 +337,16 @@
 
                 <!-- Bagian Profil Komunitas -->
                 <div class="flex items-center justify-center -mt-12">
-                    <img src="../asset login/img/basket-bg.png" alt="Basketball Icon" class="w-32 h-32 rounded-full border-4 border-gray-300 shadow-md z-10">
+                    <img src="../asset login/img/futsal3-bg.jpg" alt="Basketball Icon" class="w-32 h-32 rounded-full border-4 border-gray-300 shadow-md z-10">
                 </div>
 
                 <!-- Informasi Komunitas -->
                 <div class="text-center mt-4 mb-6">
-                    <h2 class="text-2xl font-bold text-gray-800 items-center">Basket Majalaya</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 items-center">Futsal Community</h2>
                     <p class="text-gray-600">Basket • Bandung • 20/25</p>
                 </div>
                 <div class="flex justify-end mb-6 pr-6">
-                    <button class="items-center bg-red-600 text-white w-24 px-4 py-2 rounded-lg hover:bg-red-700">JOIN</button>
+                    <a href="detailMyKomunitas.html"><button class="items-center bg-red-600 text-white w-24 px-4 py-2 rounded-lg hover:bg-red-700">JOIN</button></a>
                 </div>
             </div>
 
