--- a/komunitas/detailMyKomunitas.html
+++ b/komunitas/detailMyKomunitas.html
@@ -285,7 +285,7 @@
                     <p class="text-gray-600">Futsal • Bandung • 17/25</p>
                 </div>
                 <div class="flex justify-end mb-6 pr-6">
-                    <button class="items-center bg-red-600 text-white w-24 px-4 py-2 rounded-lg hover:bg-red-700">LEAVE</button>
+                    <a href="detailKomunitas.html"><button class="items-center bg-red-600 text-white w-24 px-4 py-2 rounded-lg hover:bg-red-700">LEAVE</button></a>
                 </div>
             </div>
 
