--- a/landingpage/FAQ.html
+++ b/landingpage/FAQ.html
@@ -33,7 +33,7 @@
         <ul class="absolute top-5 left-0 w-full p-4 list-none flex flex-row items-center justify-center gap-8">
             <li><a href="firstpage.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Home</a></li>
             <li><a href="aboutus.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">About Us</a></li>
-            <li><a href="FAQ.html" class="text-black border-b-4 border-transparent hover:border-red-700 transition duration-300">Help</a></li>
+            <li><a href="FAQ.html" class="text-black border-b-4 border-b border-red-700">Help</a></li>
         </ul>
 
         <!-- Buttons -->
