--- a/rewards/rewards.html
+++ b/rewards/rewards.html
@@ -373,13 +373,13 @@
                              <!-- Modal body -->
                            <div class="p-4 md:p-5 space-y-4">
                               <p class="text-base leading-relaxed text-black">
-                                     Tukarkan poin anda menjadi saldo gopay pada aplikasi SportSpace. Cukup tekan tombol Tukar, saldo akan otomatis masuk ke nomor gopay anda.
+                                     For each level, you will have an exchange limit, and it will increase with each level.
                               </p>
                               <p class="text-base leading-relaxed text-black">
-                                      Terms And Conditions <br>  
-                                     1. Penggunaan reward dapat dilakukan maksimal 30 hari 1x. <br> 
-                                     2. Nomor Hp yang terdaftar pada akun harus no Hp yang terdaftar pada Gopay <br>
-                                     3. Saldo Gopay yang telah ditambahkan ke Gopay tidak dapat ditarik kembali
+                                       Benefit <br>  
+                                     1. Diamond: Benefits: Can exchange points for rewards 3x in 30 days <br> 
+                                     2. Gold: Benefits: Can exchange points for rewards 2x in 30 days <br>
+                                     3. Silver: Benefits: Can exchange points for rewards 1x in 30 days
                               </p>
                            </div>
                         </div>
