--- a/komunitas/addKomunitas.html
+++ b/komunitas/addKomunitas.html
@@ -327,7 +327,14 @@
          <div class="lg:w-3/5 md:w-3/5 p-4 ">  
             <h2 class="text-2xl font-bold text-red-700 mb-2 mt-4 text-center ">Create Your Own Community</h2>
             <form class="bg-white p-4 rounded shadow">
+               <a href="komunitas.html" >
+                  <div class="flex  w-full">
+                     <i class="fi fi-rs-arrow-left"></i>
+                     <p class="text-xs text-gray-500 mt-0.5 ml-1">Back </p>
+                  </div>
+               </a>
                 <div class="flex space-x-4">
+                  
                 <div class="w-1/2" >
                     <div class="mb-2">
                         <label class="block text-gray-700 font-bold text-center mr-20">Community Profil</label>              
