--- a/profile/profile.html
+++ b/profile/profile.html
@@ -39,7 +39,7 @@
          
          <div class="flex items-center w-1/2 mr-40">
             <div class="rounded-full bg-gray-200 hover:bg-red-500 mr-2">
-               <button class="p-2 rounded-lg bg-gray-200 hover:bg-red-500">
+               <button class="p-2 rounded-full bg-gray-200 hover:bg-red-500">
                   <i class="fi fi-rs-bars-filter"></i>
                </button>
             </div>
