--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -187,7 +187,7 @@
       </div>
    </nav>
    
-   <aside id="logo-sidebar" class="fixed top-0 left-6 z-40 w-64 h-[87vh] pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
+   <aside id="logo-sidebar" class="fixed top-0 left-6 z-40 lg:w-64 md:w-48 sm:w-32 h-[87vh] pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 text-sm">
             <li>
